--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ attrs==21.4.0
 cachetools==5.0.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
-click==8.1.2
+click>=8.1.2
 datasets==2.0.0
 dill==0.3.4
 elastic-transport==8.1.1
@@ -16,7 +16,7 @@ frozenlist==1.3.0
 fsspec==2022.3.0
 google-auth==2.6.3
 google-auth-oauthlib==0.4.6
-grpcio==1.44.0
+grpcio==1.59.0
 huggingface-hub==0.5.1
 idna==3.3
 importlib-metadata==4.11.3
@@ -35,7 +35,7 @@ pyasn1-modules==0.2.8
 pyparsing==3.0.8
 python-dateutil==2.8.2
 pytz==2022.1
-PyYAML==6.0
+PyYAML==6.0.1
 regex==2022.3.15
 requests==2.27.1
 requests-oauthlib==1.3.1
@@ -52,8 +52,10 @@ tqdm==4.64.0
 transformers==4.18.0
 typing-extensions==4.1.1
 urllib3==1.26.9
-Werkzeug==2.1.1
+Werkzeug>=2.1.1
 xxhash==3.0.0
 yarl==1.7.2
 zipp==3.8.0
-sentencepiece==0.1.96
+sentencepiece==0.1.99
+Flask==3.0.0
+gevent==23.9.1
